// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionList should match snapshot 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#aaa",
      "flex": 1,
    }
  }
>
  <Component
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "rgba(238,238,238,0.2)",
        "height": 38,
      }
    }
  >
    <ReactionHeader
      onSelectReaction={[Function]}
      reactions={
        Array [
          Object {
            "count": 2,
            "name": "all_emojis",
          },
          Object {
            "count": 1,
            "name": "+1",
            "reactions": Array [
              Object {
                "emoji_name": "+1",
                "user_id": "user_id_2",
              },
            ],
          },
          Object {
            "count": 1,
            "name": "smile",
            "reactions": Array [
              Object {
                "emoji_name": "smile",
                "user_id": "user_id_1",
              },
            ],
          },
        ]
      }
      selected="all_emojis"
      theme={
        Object {
          "centerChannelBg": "#aaa",
          "centerChannelColor": "#eee",
        }
      }
    />
  </Component>
  <KeyboardAwareScrollView
    bounces={true}
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    innerRef={[Function]}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <Component
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="+1"
        navigator={
          Object {
            "setOnNavigatorEvent": [MockFunction] {
              "calls": Array [
                Array [
                  [Function],
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
          }
        }
        teammateNameDisplay="username"
        theme={
          Object {
            "centerChannelBg": "#aaa",
            "centerChannelColor": "#eee",
          }
        }
        user={
          Object {
            "id": "user_id_2",
            "username": "username_2",
          }
        }
      />
      <Component
        style={
          Object {
            "backgroundColor": "rgba(238,238,238,0.2)",
            "height": 1,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="smile"
        navigator={
          Object {
            "setOnNavigatorEvent": [MockFunction] {
              "calls": Array [
                Array [
                  [Function],
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
          }
        }
        teammateNameDisplay="username"
        theme={
          Object {
            "centerChannelBg": "#aaa",
            "centerChannelColor": "#eee",
          }
        }
        user={
          Object {
            "id": "user_id_1",
            "username": "username_1",
          }
        }
      />
      <Component
        style={
          Object {
            "backgroundColor": "rgba(238,238,238,0.2)",
            "height": 1,
          }
        }
      />
    </Component>
  </KeyboardAwareScrollView>
</Component>
`;

exports[`ReactionList should match snapshot, renderReactionRows 1`] = `
Array [
  <Component
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="+1"
      navigator={
        Object {
          "setOnNavigatorEvent": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          },
        }
      }
      teammateNameDisplay="username"
      theme={
        Object {
          "centerChannelBg": "#aaa",
          "centerChannelColor": "#eee",
        }
      }
      user={
        Object {
          "id": "user_id_2",
          "username": "username_2",
        }
      }
    />
    <Component
      style={
        Object {
          "backgroundColor": "rgba(238,238,238,0.2)",
          "height": 1,
        }
      }
    />
  </Component>,
  <Component
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="smile"
      navigator={
        Object {
          "setOnNavigatorEvent": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          },
        }
      }
      teammateNameDisplay="username"
      theme={
        Object {
          "centerChannelBg": "#aaa",
          "centerChannelColor": "#eee",
        }
      }
      user={
        Object {
          "id": "user_id_1",
          "username": "username_1",
        }
      }
    />
    <Component
      style={
        Object {
          "backgroundColor": "rgba(238,238,238,0.2)",
          "height": 1,
        }
      }
    />
  </Component>,
]
`;
